--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+테스트용 백업/
+Members/62기 명단_병합테스트.xlsx
+Members/62기 명단.xlsx
+Members/63기 명단.xlsx
